--- a/tests/conf/poker.server.xml.in
+++ b/tests/conf/poker.server.xml.in
@@ -2,11 +2,11 @@
 <server xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:noNamespaceSchemaLocation="server.xsd"
   	autodeal="yes"
-    simultaneous="4"
-    verbose="3"
-    chat="yes" >
+	simultaneous="4"
+	verbose="0"
+	chat="yes" >
 
-  <delays autodeal="3" round="2" position="1" showdown="7" finish="3" />
+  <delays autodeal="3" round="2" position="1" showdown="5" finish="3" />
   
   <table name="One"	variant="holdem" betting_structure="2-4-limit" seats="10" timeout="60" custom_money="0" />
   <table name="Two"	variant="holdem" betting_structure="10-15-limit" seats="10" timeout="60" custom_money="0" />
@@ -39,12 +39,12 @@
   <table name="Thirty"	variant="7stud" betting_structure="ante-10-15-pot-limit" seats="8" timeout="60" custom_money="0" />
   <table name="Fourty"	variant="7stud" betting_structure="ante-5-10-limit" seats="8" timeout="60" custom_money="0" />
 
-  <listen tcp="19480"
-          tcp_ssl="19481" 
-          http="19482" 
-          http_ssl="19483" />
+  <listen tcp="19380"
+          tcp_ssl="19381" 
+          http="19382"
+          http_ssl="19383"/>
 
-  <database name="pokernetworktest" host="localhost" user="pokernetworktest" password="pokernetwork" />
-  <path>/etc/poker-engine ../conf</path> 
+  <database name="@POKER_DATABASE@" host="@POKER_DBHOST@" user="@POKER_DBUSER@" password="@POKER_DBUSER_PASSWORD@" />
+  <path>@POKER_ENGINE_PKGSYSCONFDIR@ @POKER_NETWORK_PKGSYSCONFDIR@</path> 
   <users temporary="BOT" />
 </server>
