fixed checkTourneysSchedule and added tests, fixes #4892

--- a/tests/test-pokerservice.py.in
+++ b/tests/test-pokerservice.py.in
@@ -49,6 +49,7 @@ from tests import testclock
 from twisted.trial import unittest, runner, reporter
 import twisted.internet.base
 from twisted.internet import reactor, defer
+from twisted.python.runtime import seconds
 
 twisted.internet.base.DelayedCall.debug = True
 
@@ -1075,9 +1076,11 @@ class ResthostTestCase(unittest.TestCase):
         self.service = pokerservice.PokerService(settings)
 
     def tearDown(self):
-        d = self.service.stopService()
-        d.addCallback(lambda x: self.destroyDb())
-        return d
+        if hasattr(self, 'service'):
+            d = self.service.stopService()
+            d.addCallback(lambda x: self.destroyDb())
+            return d
+        return defer.succeed(True)
 
     def test00_init(self):
         """ setupResthost twice with the same information gives the same serial """
@@ -1602,21 +1605,85 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         #  gets created; the default schema doesn't respawn this tourney
         #  by default.
         cursor = self.db.cursor()
-        cursor.execute("UPDATE tourneys_schedule SET respawn = 'y', register_time = UNIX_TIMESTAMP(NOW() + INTERVAL 1 SECOND), start_time = UNIX_TIMESTAMP(NOW() + INTERVAL 1 MINUTE), respawn_interval=3600 WHERE name = 'regular1'")
+        cursor.execute("UPDATE tourneys_schedule SET respawn = 'y', register_time = %s+1, start_time = %s+60, respawn_interval=3600 WHERE name = 'regular1'", (seconds(), seconds()))
         self.assertEqual(1, cursor.rowcount)
         cursor.close()
 
         self.service.startService()
         d = defer.Deferred()
         def checkTourneys(status):
-            t = self.service.tourneys.values()[0]
             self.failUnless(filter(lambda tourney: tourney.sit_n_go == 'n', self.service.tourneys.values()))
             self.failUnless(filter(lambda tourney: tourney.name == 'regular1', self.service.tourneys.values()))
         d.addCallback(checkTourneys)
         reactor.callLater(3, lambda: d.callback(True))
 
         return d
-
+    
+    def test13_1_checkTourneySchedule_respawning_regular(self):
+        """checks for weather a respawn tourney in the past, present and in the future are spawned correctly"""
+        cursor = self.db.cursor()
+        cursor.execute("""INSERT INTO tourneys_schedule
+            SET
+            name = 'respawn_regular_1',
+            description_short = 'test respawn_regular',
+            description_long = 'test respawn_regular',
+            variant = 'holdem',
+            betting_structure = 'level-15-30-no-limit',
+            currency_serial = 1,
+            sit_n_go = 'n',
+            start_time = %s-120,
+            register_time = %s-160,
+            active = 'y',
+            respawn = 'y',
+            respawn_interval = 60
+            ;""", (seconds(), seconds()))
+        self.assertEqual(1, cursor.rowcount)
+        cursor.execute("""INSERT INTO tourneys_schedule
+            SET
+            name = 'respawn_regular_2',
+            description_short = 'test respawn_regular',
+            description_long = 'test respawn_regular',
+            variant = 'holdem',
+            betting_structure = 'level-15-30-no-limit',
+            currency_serial = 1,
+            sit_n_go = 'n',
+            start_time = %s+10,
+            register_time = %s-30,
+            active = 'y',
+            respawn = 'y',
+            respawn_interval = 60
+            ;""", (seconds(), seconds()))
+        self.assertEqual(1, cursor.rowcount)
+        cursor.execute("""INSERT INTO tourneys_schedule
+            SET
+            name = 'respawn_regular_3',
+            description_short = 'test respawn_regular',
+            description_long = 'test respawn_regular',
+            variant = 'holdem',
+            betting_structure = 'level-15-30-no-limit',
+            currency_serial = 1,
+            sit_n_go = 'n',
+            start_time = %s+120,
+            register_time = %s+90,
+            active = 'y',
+            respawn = 'y',
+            respawn_interval = 60
+            ;""", (seconds(), seconds()))
+        self.assertEqual(1, cursor.rowcount)
+        cursor.close()
+        pokerservice.UPDATE_TOURNEYS_SCHEDULE_DELAY = 2
+        pokerservice.CHECK_TOURNEYS_SCHEDULE_DELAY = 1
+        self.service.startService()
+        self.failUnless(filter(lambda tourney: tourney.name == 'respawn_regular_2', self.service.tourneys.values()), "present tourney not spawned")
+        self.failIf(filter(lambda tourney: tourney.name == 'respawn_regular_3', self.service.tourneys.values()), "future tourney spawned too early")
+        def deferedCheckTourneys(result):
+            self.failUnless(filter(lambda tourney: tourney.name == 'respawn_regular_1', self.service.tourneys.values()), "past tourney not spawned")
+            self.failUnless(filter(lambda tourney: tourney.name == 'respawn_regular_3', self.service.tourneys.values()), "future tourney never spawned")
+        d = defer.Deferred()
+        d.addCallback(deferedCheckTourneys)
+        reactor.callLater(100, lambda: d.callback(True))
+        return d
+    
     # ----------------------------------------------------------------
     def test14_checkTourneysSchedule_cancel_regular(self):
         pokerservice.DELETE_OLD_TOURNEYS_DELAY = 0
